# PicSolver

./: .gitignore  PicSolver.cabal  README.md  input.json
app/: Main.hs
src/: Board.hs  BoardKnowledge.hs  Main.hs  OldBoard.hs  Row.hs  Util.hs
tests/: test.hs
