name:                PicSolver
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/{{github-username}}{{^github-username}}githubuser{{/github-username}}/pic_solver#readme
-- license:             BSD3
-- license-file:        LICENSE
-- author:              {{author-name}}{{^author-name}}Author name here{{/author-name}}
-- maintainer:          {{author-email}}{{^author-email}}example@example.com{{/author-email}}
-- copyright:           {{copyright}}{{^copyright}}{{year}}{{^year}}2019{{/year}} {{author-name}}{{^author-name}}Author name here{{/author-name}}{{/copyright}}
-- category:            {{category}}{{^category}}Web{{/category}}
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Board
  ghc-options:         -Wall -O2 -fprof-auto-calls


executable pic_solver
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , PicSolver


test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , tasty >= 0.7
                     , tasty-hunit >= 0.10
                     , tasty-quickcheck >= 0.10
                     , PicSolver
